(F) Simulation of portfolio with funds given and time period to make loans

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -12,14 +12,14 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "from optimization import gp_optimize_threshold\n",
     "from data import load_dataset, get_train_test_split\n",
-    "from evaluation import evaluate_model, lend_using_target_only"
+    "from optimization import gp_optimize_threshold\n",
+    "from evaluation import train_and_test_other_models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -81,138 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "-- Linear Regression --\n",
-      "Mean absolute error: 2188.281\n",
-      "R^2 Score:           0.840\n",
-      "\n",
-      "-- Huber Regressor --\n",
-      "Mean absolute error: 1659.147\n",
-      "R^2 Score:           0.836\n",
-      "\n",
-      "-- Linear SVM --\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.5/lib/python3.5/site-packages/scipy/linalg/basic.py:1018: RuntimeWarning: internal gelsd driver lwork query error, required iwork dimension not returned. This is likely the result of LAPACK bug 0038, fixed in LAPACK 3.2.2 (released July 21, 2010). Falling back to 'gelss' driver.\n",
-      "  warnings.warn(mesg, RuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean absolute error: 1753.697\n",
-      "R^2 Score:           0.833\n",
-      "\n",
-      "-- Poly SVM 2 --\n",
-      "Mean absolute error: 2054.468\n",
-      "R^2 Score:           0.825\n",
-      "\n",
-      "-- Poly SVM 5 --\n",
-      "Mean absolute error: 2400.171\n",
-      "R^2 Score:           0.777\n",
-      "\n",
-      "-- RBF SVM --\n",
-      "Mean absolute error: 1854.323\n",
-      "R^2 Score:           0.831\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Regression models\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.linear_model import LinearRegression, HuberRegressor\n",
-    "\n",
-    "# Linear Regression\n",
-    "print(\"\\n-- Linear Regression --\")\n",
-    "lin_reg = LinearRegression()\n",
-    "lin_reg.fit(X_train, y_train)\n",
-    "evaluate_model(lin_reg, X_test, y_test)\n",
-    "\n",
-    "# Huber Regressor\n",
-    "print(\"\\n-- Huber Regressor --\")\n",
-    "hub_reg = HuberRegressor(epsilon=1.)\n",
-    "hub_reg.fit(X_train, y_train)\n",
-    "evaluate_model(hub_reg, X_test, y_test)\n",
-    "\n",
-    "# Linear SVM\n",
-    "print(\"\\n-- Linear SVM --\")\n",
-    "svm_lin = SVR(kernel=\"linear\", C=1e3)\n",
-    "svm_lin.fit(X_train, y_train)\n",
-    "evaluate_model(svm_lin, X_test, y_test)\n",
-    "\n",
-    "# Poly SVM\n",
-    "print(\"\\n-- Poly SVM 2 --\")\n",
-    "svm_poly_2 = SVR(kernel=\"poly\", degree=2, C=1e5)\n",
-    "svm_poly_2.fit(X_train, y_train)\n",
-    "evaluate_model(svm_poly_2, X_test, y_test)\n",
-    "\n",
-    "print(\"\\n-- Poly SVM 5 --\")\n",
-    "svm_poly_5 = SVR(kernel=\"poly\", degree=5, C=1e8)\n",
-    "svm_poly_5.fit(X_train, y_train)\n",
-    "evaluate_model(svm_poly_5, X_test, y_test)\n",
-    "\n",
-    "# RBF SVM\n",
-    "print(\"\\n-- RBF SVM --\")\n",
-    "svm_rbf = SVR(kernel=\"rbf\", C=1e4)\n",
-    "svm_rbf.fit(X_train, y_train)\n",
-    "evaluate_model(svm_rbf, X_test, y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    423/500\n",
-      "Loans given:       $ 4501.4\n",
-      "Payments received: $ 5135.2\n",
-      "\n",
-      "Profits:           $ 633.9\n",
-      "Profit Percentage: 14.1%\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "633.87401227906503"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Simulate making loans only to those who can pay back threshold times of original amount\n",
-    "regressed_payment = lin_reg.predict(X_test)\n",
-    "lend_using_target_only(regressed_payment, X_test, y_test, X_scaler, threshold=1.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -220,10 +89,10 @@
     {
      "data": {
       "text/plain": [
-       "<paramz.optimization.optimization.opt_lbfgsb at 0x1087cedd8>"
+       "<paramz.optimization.optimization.opt_lbfgsb at 0x1055559e8>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -254,54 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "---- Optimizing threshold using X_val ----\n",
-      "Threshold: 1.158622\n",
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    416/500\n",
-      "Loans given:       $ 4452.8\n",
-      "Payments received: $ 4973.7\n",
-      "\n",
-      "Profits:           $ 520.9\n",
-      "Profit Percentage: 11.7%\n",
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    128/500\n",
-      "Loans given:       $ 941.6\n",
-      "Payments received: $ 1161.6\n",
-      "\n",
-      "Profits:           $ 220.0\n",
-      "Profit Percentage: 23.4%\n",
-      "\n",
-      "----------- Testing on X_test ------------\n",
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    423/500\n",
-      "Loans given:       $ 4479.4\n",
-      "Payments received: $ 5096.7\n",
-      "\n",
-      "Profits:           $ 617.3\n",
-      "Profit Percentage: 13.8%\n",
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    137/500\n",
-      "Loans given:       $ 1017.6\n",
-      "Payments received: $ 1173.8\n",
-      "\n",
-      "Profits:           $ 156.2\n",
-      "Profit Percentage: 15.3%\n"
+      "1.15862234903\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "156.15602991533774"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -311,6 +134,7 @@
     "\n",
     "# Optimize threshold for profits / profit_percentage\n",
     "threshold = gp_optimize_threshold(gp_model, X_val, y_val, X_scaler, y_scaler, optimize_for=\"profit_percentage\")\n",
+    "\"\"\"\n",
     "print(\"\\n---- Optimizing threshold using X_val ----\")\n",
     "print(\"Threshold: %f\" % threshold)\n",
     "lend_using_target_only(regressed_payment, X_val, y_val, X_scaler, threshold=1.0)\n",
@@ -321,17 +145,71 @@
     "regressed_payment = y_scaler.inverse_transform(y_hat).reshape(-1)\n",
     "print(\"\\n----------- Testing on X_test ------------\")\n",
     "lend_using_target_only(regressed_payment, X_test, y_test, X_scaler, threshold=1.0)\n",
-    "lend_using_target_only(regressed_payment, X_test, y_test, X_scaler, threshold=threshold)"
+    "lend_using_target_only(regressed_payment, X_test, y_test, X_scaler, threshold=threshold)\n",
+    "\"\"\"\n",
+    "print(threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Approved 15000.000000\n",
+      "Approved 30000.000000\n",
+      "Portfolio funds: 55000.000000\n",
+      "Approved 2300.000000\n",
+      "Approved 6000.000000\n",
+      "Approved 23000.000000\n",
+      "Portfolio funds: 25288.020000\n",
+      "Approved 6300.000000\n",
+      "Approved 10000.000000\n",
+      "Approved 2000.000000\n",
+      "Portfolio funds: 9388.680000\n",
+      "Approved 9000.000000\n",
+      "Portfolio funds: 3428.280000\n",
+      "Portfolio funds: 6748.850000\n",
+      "Approved 10000.000000\n",
+      "Portfolio funds: 69.420000\n",
+      "Approved 2300.000000\n",
+      "Portfolio funds: 1302.470000\n",
+      "Approved 2250.000000\n",
+      "Portfolio funds: 2661.600000\n",
+      "Portfolio funds: 6352.360000\n",
+      "Portfolio funds: 10043.120000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from simulation import *\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%reload_ext autoreload\n",
+    "\n",
+    "simulate_time_period(gp_model, X_val, y_val, X_scaler, y_scaler, threshold,\n",
+    "                     fund_given=1e5, num_months=10, incoming_loans_per_time_period=10,\n",
+    "                     optimize_for=\"TODO\", version=\"threshold_only\", model_type=\"gp\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "train_and_test_other_models(X_train, y_train, X_test, y_test, X_scaler)"
+   ]
   }
  ],
  "metadata": {
