(F) Simulates multiple times and get the indicators of performance

--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -10,13 +10,16 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "from data import load_dataset, get_train_test_split\n",
-    "from evaluation import evaluate_model, lend_using_target_only"
+    "from optimization import gp_optimize_threshold\n",
+    "from evaluation import train_and_test_other_models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -49,31 +52,36 @@
      "output_type": "stream",
      "text": [
       "X_train: (1000, 38), y_train: (1000,)\n",
+      "X_val: (500, 38), y_val: (500,)\n",
       "X_test: (500, 38), y_test: (500,)\n"
      ]
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = get_train_test_split(features)\n",
+    "X_train, X_test, y_train, y_test = get_train_test_split(features, test_size=0.3, random_state=0)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=0)\n",
     "\n",
     "# Temporarily use subset of data to debug faster\n",
     "# TODO: Remove\n",
     "X_train, y_train = X_train[:1000,:], y_train[:1000]\n",
+    "X_val, y_val     = X_val[:500,:], y_val[:500]\n",
     "X_test, y_test   = X_test[:500,:], y_test[:500]\n",
     "\n",
     "# Normalize\n",
-    "scaler = MinMaxScaler()\n",
-    "scaler.fit(X_train)\n",
-    "X_train = scaler.transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "X_scaler = MinMaxScaler()\n",
+    "X_scaler.fit(X_train)\n",
+    "X_train = X_scaler.transform(X_train)\n",
+    "X_val = X_scaler.transform(X_val)\n",
+    "X_test = X_scaler.transform(X_test)\n",
     "\n",
     "print(\"X_train: %s, y_train: %s\" % (str(X_train.shape), str(y_train.shape)))\n",
+    "print(\"X_val: %s, y_val: %s\" % (str(X_val.shape), str(y_val.shape)))\n",
     "print(\"X_test: %s, y_test: %s\" % (str(X_test.shape), str(y_test.shape)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -82,117 +90,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "-- Linear Regression --\n",
-      "Mean absolute error: 1992.007\n",
-      "R^2 Score:           0.856\n",
-      "\n",
-      "-- Huber Regressor --\n",
-      "Mean absolute error: 1716.457\n",
-      "R^2 Score:           0.819\n",
-      "\n",
-      "-- Linear SVM --\n",
-      "Mean absolute error: 1740.245\n",
-      "R^2 Score:           0.830\n",
-      "\n",
-      "-- Poly SVM 2 --\n",
-      "Mean absolute error: 2020.491\n",
-      "R^2 Score:           0.821\n",
-      "\n",
-      "-- Poly SVM 5 --\n",
-      "Mean absolute error: 2378.822\n",
-      "R^2 Score:           0.773\n",
-      "\n",
-      "-- RBF SVM --\n",
-      "Mean absolute error: 1800.284\n",
-      "R^2 Score:           0.830\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "-8198.96804571\n",
+      "12216.7635721\n",
+      "32632.4951899\n"
      ]
     }
    ],
    "source": [
-    "# Regression models\n",
-    "from sklearn.svm import SVR\n",
-    "from sklearn.linear_model import LinearRegression, HuberRegressor\n",
+    "from simulation import *\n",
     "\n",
-    "# Linear Regression\n",
-    "print(\"\\n-- Linear Regression --\")\n",
-    "lin_reg = LinearRegression()\n",
-    "lin_reg.fit(X_train, y_train)\n",
-    "evaluate_model(lin_reg, X_test, y_test)\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%reload_ext autoreload\n",
     "\n",
-    "# Huber Regressor\n",
-    "print(\"\\n-- Huber Regressor --\")\n",
-    "hub_reg = HuberRegressor(epsilon=1.)\n",
-    "hub_reg.fit(X_train, y_train)\n",
-    "evaluate_model(hub_reg, X_test, y_test)\n",
+    "np.random.seed(1)\n",
+    "perf = simulate_N_time_periods(gp_model, X_val, y_val, X_scaler, y_scaler, threshold=1.1, num_periods=30,\n",
+    "                               fund_given=1e5, num_months=10, incoming_loans_per_time_period=100,\n",
+    "                               optimize_for=\"TODO\", version=\"threshold_only\", model_type=\"gp\")\n",
     "\n",
-    "# Linear SVM\n",
-    "print(\"\\n-- Linear SVM --\")\n",
-    "svm_lin = SVR(kernel=\"linear\", C=1e3)\n",
-    "svm_lin.fit(X_train, y_train)\n",
-    "evaluate_model(svm_lin, X_test, y_test)\n",
+    "mean_profits = np.mean(perf, axis=0)[:,0]\n",
+    "stddev_profits = np.std(perf, axis=0)[:,0]\n",
+    "lowerb_profits = mean_profits - stddev_profits\n",
+    "upperb_profits = mean_profits + stddev_profits\n",
     "\n",
-    "# Poly SVM\n",
-    "print(\"\\n-- Poly SVM 2 --\")\n",
-    "svm_poly_2 = SVR(kernel=\"poly\", degree=2, C=1e5)\n",
-    "svm_poly_2.fit(X_train, y_train)\n",
-    "evaluate_model(svm_poly_2, X_test, y_test)\n",
-    "\n",
-    "print(\"\\n-- Poly SVM 5 --\")\n",
-    "svm_poly_5 = SVR(kernel=\"poly\", degree=5, C=1e8)\n",
-    "svm_poly_5.fit(X_train, y_train)\n",
-    "evaluate_model(svm_poly_5, X_test, y_test)\n",
-    "\n",
-    "# RBF SVM\n",
-    "print(\"\\n-- RBF SVM --\")\n",
-    "svm_rbf = SVR(kernel=\"rbf\", C=1e4)\n",
-    "svm_rbf.fit(X_train, y_train)\n",
-    "evaluate_model(svm_rbf, X_test, y_test)\n"
+    "print(np.cumsum(lowerb_profits)[-1])\n",
+    "print(np.cumsum(mean_profits)[-1])\n",
+    "print(np.cumsum(upperb_profits)[-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Without model ---\n",
-      "Loans approved:    500/500\n",
-      "Loans given:       $ 5408.2\n",
-      "Payments received: $ 5924.2\n",
-      "\n",
-      "Profits:           $ 516.0\n",
-      "Profit Percentage: 9.5%\n",
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    392/500\n",
-      "Loans given:       $ 4516.9\n",
-      "Payments received: $ 5159.8\n",
-      "\n",
-      "Profits:           $ 642.9\n",
-      "Profit Percentage: 14.2%\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<paramz.optimization.optimization.opt_lbfgsb at 0x1085f8668>"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Simulate making loans only to those who can pay back threshold times of original amount\n",
-    "regressed_payment = lin_reg.predict(X_test)\n",
-    "lend_using_target_only(regressed_payment, X_test, y_test, scaler, threshold=1.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "# Gaussian Process\n",
     "import GPy\n",
@@ -205,14 +150,12 @@
     "# Initialize GP Model\n",
     "kernel = GPy.kern.RBF(input_dim=X_train.shape[1], variance=1., lengthscale=1.)\n",
     "gp_model = GPy.models.GPRegression(X_train, y_train_scaled, kernel)\n",
-    "gp_model.optimize()\n",
-    "\n",
-    "y_hat, conf = gp_model.predict(X_test)"
+    "gp_model.optimize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -221,29 +164,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "--- Without model ---\n",
-      "Loans approved:    500/500\n",
-      "Loans given:       $ 5408.2\n",
-      "Payments received: $ 5924.2\n",
-      "\n",
-      "Profits:           $ 516.0\n",
-      "Profit Percentage: 9.5%\n",
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    387/500\n",
-      "Loans given:       $ 4387.3\n",
-      "Payments received: $ 5011.0\n",
-      "\n",
-      "Profits:           $ 623.7\n",
-      "Profit Percentage: 14.2%\n"
+      "1.15862234903\n"
      ]
     }
    ],
    "source": [
-    "# Simulate making loans only to those who can pay back threshold times of original amount\n",
+    "# Use X_val (validation set) to optimize threshold\n",
+    "y_hat, conf = gp_model.predict(X_val)\n",
     "regressed_payment = y_scaler.inverse_transform(y_hat).reshape(-1)\n",
-    "lend_using_target_only(regressed_payment, X_test, y_test, scaler, threshold=1.0)"
+    "\n",
+    "# Optimize threshold for profits / profit_percentage\n",
+    "threshold = gp_optimize_threshold(gp_model, X_val, y_val, X_scaler, y_scaler, optimize_for=\"profit_percentage\")\n",
+    "\"\"\"\n",
+    "print(\"\\n---- Optimizing threshold using X_val ----\")\n",
+    "print(\"Threshold: %f\" % threshold)\n",
+    "lend_using_target_only(regressed_payment, X_val, y_val, X_scaler, threshold=1.0)\n",
+    "lend_using_target_only(regressed_payment, X_val, y_val, X_scaler, threshold=threshold)\n",
+    "\n",
+    "# Test threshold value on test set\n",
+    "y_hat, conf = gp_model.predict(X_test)\n",
+    "regressed_payment = y_scaler.inverse_transform(y_hat).reshape(-1)\n",
+    "print(\"\\n----------- Testing on X_test ------------\")\n",
+    "lend_using_target_only(regressed_payment, X_test, y_test, X_scaler, threshold=1.0)\n",
+    "lend_using_target_only(regressed_payment, X_test, y_test, X_scaler, threshold=threshold)\n",
+    "\"\"\"\n",
+    "print(threshold)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train_and_test_other_models(X_train, y_train, X_test, y_test, X_scaler)"
    ]
   }
  ],
