Ethics Discussion added, please review

--- a/report/report.tex
+++ b/report/report.tex
@@ -8,6 +8,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{multirow}
+\usepackage{amsthm}
 \frenchspacing
 \setlength{\pdfpagewidth}{8.5in}
 \setlength{\pdfpageheight}{11in}
@@ -70,7 +71,8 @@ Hello
 \noindent Hello
 
 \section{Motivating Application}
-Hello
+
+Furthermore, ethical implications for the application of loan-making based on Gaussian Processes needs to be considered. Inherently, our current system of lending is still very manual with human interferences. Our human biases and prejudices lead to discrimination and inequality. This is because whenever a person needs a loan, they have to first speak with a loan advisor and then fill out a form containing information which is ultimately judged by another person who albeit unconsciously but nevertheless can make a biased assessment of the person’s eligibility for the loan. The digitisation of loan making could potentially make obtaining loans fairer for all. However, there is also a concern that doing so may in fact inadvertently reinforce human prejudices. This is when the quality and quantity of data used to train the model becomes critical to building fairness into algorithm. With our current GP model, we are aware that that our model could in fact lead us to make decisions that may be discriminatory. However, as there currently is no other model regarding making loan assessments, we think that with further model training on larger data, our application can be improved to make loan approvals fairer.  
 
 \section{Technical Approach}
 Gaussian process:
