--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -99,10 +99,10 @@
     {
      "data": {
       "text/plain": [
-       "<paramz.optimization.optimization.opt_lbfgsb at 0x1c3e59ab320>"
+       "<paramz.optimization.optimization.opt_lbfgsb at 0x1c3e56f3c88>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.15862234903\n"
+      "<class 'numpy.ndarray'>\n(500,)\n1.15862234903\n"
      ]
     }
    ],
@@ -141,6 +141,9 @@
     "# Use X_val (validation set) to optimize threshold\n",
     "y_hat, conf = gp_model.predict(X_val)\n",
     "regressed_payment = y_scaler.inverse_transform(y_hat).reshape(-1)\n",
+    "\n",
+    "print(type(regressed_payment))\n",
+    "print(regressed_payment.shape)\n",
     "\n",
     "# Optimize threshold for profits / profit_percentage\n",
     "threshold = gp_optimize_threshold(gp_model, X_val, y_val, X_scaler, y_scaler, optimize_for=\"profit_percentage\")\n",
